# mailPilot

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
config/: .gitignore  HOW_TO_GET_CREDENTIALS.md  app_config.py
data/: .gitignore  README.md
docs/: architecture.md  logging-implementation-roadmap.md  logging-migration-guide.md  setup-guide.md
scripts/: keychain_env.py
src/: main.py
src/approval/: interface.py
src/chatgpt/: client.py
src/gmail/: client.py  client_with_logging.py
src/marketing/: __init__.py  outbound.py
src/storage/: thread_memory.py
src/utils/: __init__.py  logging_config.py
tests/: __init__.py  test_approval_interface.py  test_chatgpt_client.py  test_email_auto_responder.py  test_gmail_client.py  test_logging_config.py  test_thread_memory.py
